Added color scheme

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars Concept Title goes here</title>
+
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/screen.css">
 </head>
 <body>
     <h1>Mars client side</h1>
+    
     <script src="assets/js/main.js"></script>
     <script src="assets/js/api.js"></script>
 </body>
