Added quick access section

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="assets/css/screen.css">
 </head>
 <body>
-    <h1>Mars client side</h1>
-    
+    <main>
+        <section id="quick-access">
+            <header>
+                <h2>GREETINGS</h2>
+                <h3>Name</h3>
+            </header>
+        </section>
+    </main>
+
     <script src="assets/js/main.js"></script>
     <script src="assets/js/api.js"></script>
 </body>
