added buttons for settings & send package added 2 h4 titles

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
                 <h2>GREETINGS</h2>
                 <h3>Name</h3>
             </header>
+            <h4>Recent trips</h4>
+            <input type="button" id="send-package" value="Send Package">
+            <h4>Shared locations</h4>
+            <input type="button" id="settings" value="Settings">
         </section>
     </main>
 
