--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
         </section>
     </main>
 
+    <script src="assets/js/templates.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/api.js"></script>
 </body>
