Basic searchbar design

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <main>
+        <div class="searchbar">
+            <label for="searchBox-1">S</label>
+            <input type="text" id="searchBox-1" name="searchbox" placeholder="Where are we going?">
+        </div>
         <section id="quick-access">
             <header>
                 <h2>GREETINGS</h2>
