Friendlist filled by api

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,16 @@
                     <li></li>
                 </ul>
             </article>
+            <article id="friendlist">
+                <h2>Friends</h2>
+                <ul>
+                    <li>
+                        <button class="add">
+                            +
+                        </button>
+                    </li>
+                </ul>
+            </article>
             <input type="button" id="send-package" value="Send Package">
             <h4>Shared locations</h4>
             <input type="button" id="settings" value="Settings">
@@ -47,6 +57,7 @@
     </main>
 
     <script src="assets/js/templates.js"></script>
+    <script src="assets/js/friends.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/api.js"></script>
 </body>
