Add account settings styling

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,31 @@
         </section>
     </main>
 
+    <aside id="account-settings">
+        <h2>Account</h2>
+        <ul>
+            <li>
+                <h3>Name</h3>
+                <p>Jane Roe</p>
+                <a href="#" id="edit-name">Edit</a>
+            </li>
+            <li>
+                <h3>Password</h3>
+                <a href="#" id="edit-password">Change password</a>
+            </li>
+            <li>
+                <h3>Subscription</h3>
+                <p>None</p>
+                <a href="#" id="edit-subscription">Edit</a>
+            </li>
+            <li>
+                <h3>Business user</h3>
+                <input type="checkbox" id="edit-business-user">
+            </li>
+        </ul>
+        <button>Update account settings</button>
+    </aside>
+
     <script src="assets/js/templates.js"></script>
     <script src="assets/js/friends.js"></script>
     <script src="assets/js/main.js"></script>
