--- a/src/index.html
+++ b/src/index.html
@@ -56,12 +56,12 @@
         </section>
     </main>
 
-    <aside id="account-settings" class="active">
+    <aside id="account-settings">
         <h2>Account</h2>
         <ul>
             <li id="name-settings">
                 <h3>Name</h3>
-                <p>Jane Roe</p>
+                <p></p>
                 <input type="text" id="new-name" class="hidden">
                 <a href="#" id="edit-name">Edit</a>
             </li>
@@ -77,7 +77,7 @@
             </li>
             <li id="subscription-settings">
                 <h3>Subscription</h3>
-                <p>None</p>
+                <p></p>
                 <a href="#" id="edit-subscription">Edit</a>
             </li>
             <li id="business-settings">
