Added save function

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                 <input type="checkbox" id="edit-business-user">
             </li>
         </ul>
-        <button>Update account settings</button>
+        <button id="update-account">Update account settings</button>
     </aside>
 
     <script src="assets/js/templates.js"></script>
