--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
+
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
     <main>
