Open and close settings

--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,11 @@
             </article>
             <input type="button" id="send-package" value="Send Package">
             <h4>Shared locations</h4>
+            <button id="open-settings">Settings</button>
         </section>
     </main>
 
-    <aside id="settings" class="active">
+    <aside id="settings">
         <header>
             <button class="back"><ion-icon name="chevron-back-outline"></ion-icon></button>
             <button class="achievements"><ion-icon name="ribbon-outline"></ion-icon></button>
@@ -68,11 +69,12 @@
             </figure>
         </header>
         <ul>
-            <li>Account information<ion-icon name="chevron-forward-outline"></ion-icon></li>
-            <li>Subscriptions<ion-icon name="chevron-forward-outline"></ion-icon></li>
+            <li id="open-account-settings">Account information<ion-icon name="chevron-forward-outline"></ion-icon></li>
+            <li id="open-subscription">Subscriptions<ion-icon name="chevron-forward-outline"></ion-icon></li>
             <li>Friends<ion-icon name="chevron-forward-outline"></ion-icon></li>
             <li>Favourite routes<ion-icon name="chevron-forward-outline"></ion-icon></li>
             <li>Notifications<ion-icon name="chevron-forward-outline"></ion-icon></li>
+            <li id="open-report">Report an issue<ion-icon name="chevron-forward-outline"></ion-icon></li>
         </ul>
     </aside>
 
