Changed top to translateY for more performant animations

--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
             <select name="select-type" id="select-type">
                 <option value="0">Pod ordering / arrival</option>
                 <option value="1">Menu usage</option>
-                <option value="2">Acount information</option>
+                <option value="2">Account information</option>
                 <option value="3">Billing</option>
                 <option value="4">Other</option>
             </select>
