--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,7 @@
 
     <script src="assets/js/templates.js"></script>
     <script src="assets/js/components/navigation.js"></script>
+    <script src="assets/js/components/pod-order.js"></script>
     <script src="assets/js/components/friends.js"></script>
     <script src="assets/js/components/user.js"></script>
     <script src="assets/js/components/quick-access.js"></script>
