--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,12 @@
         </svg>
     </aside>
 
+    <aside id="notification">
+        <p>This is a test notification</p>
+    </aside>
+
     <script src="assets/js/templates.js"></script>
+    <script src="assets/js/components/notification.js"></script>
     <script src="assets/js/components/navigation.js"></script>
     <script src="assets/js/components/pod-order.js"></script>
     <script src="assets/js/components/friends.js"></script>
