Added onGoto & onLeave to Page

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <div class="searchbar">
-            <label for="searchBox-1">S</label>
+            <label for="searchBox-1"><ion-icon name="search-outline"></ion-icon></label>
             <input type="text" id="searchBox-1" name="searchbox" placeholder="Where are we going?">
             <ul>
             </ul>
