--- a/src/index.html
+++ b/src/index.html
@@ -135,10 +135,12 @@
             <button class="back"><ion-icon name="chevron-back-outline"></ion-icon></button>
             <button class="achievements"><ion-icon name="ribbon-outline"></ion-icon></button>
             <h2>GREETING Name</h2>
-            <figure>
-                <img src="https://fakeimg.pl/100/" alt="">
-                <figcaption>no subscription</figcaption>
-            </figure>
+            <div class="user-icon-wrapper">
+                <div class="user-icon">
+
+                </div>
+                <h3>no subscription active</h3>
+            </div>
         </header>
         <ul>
             <li data-open-setting="account-settings">Account information<ion-icon name="chevron-forward-outline"></ion-icon></li>
