--- a/src/index.html
+++ b/src/index.html
@@ -252,8 +252,7 @@
         <span id="payment-response"></span>
     </aside>
 
-    <aside id="notification">
-        <p>This is a test notification</p>
+    <aside id="notifications">
     </aside>
 
     <script src="assets/js/templates.js"></script>
