--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@
     <script src="assets/js/components/searchbar.js"></script>
     <script src="assets/js/components/settings.js"></script>
     <script src="assets/js/main.js"></script>
-
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+    
+    <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
