Added report api

--- a/src/index.html
+++ b/src/index.html
@@ -195,11 +195,11 @@
         <form action="#" method="post">
             <label for="select-type">Category</label>
             <select name="select-type" id="select-type">
-                <option value="0">Pod ordering / arrival</option>
-                <option value="1">Menu usage</option>
-                <option value="2">Account information</option>
-                <option value="3">Billing</option>
-                <option value="4">Other</option>
+                <option>Pod ordering / arrival</option>
+                <option>Menu usage</option>
+                <option>Account information</option>
+                <option>Billing</option>
+                <option>Other</option>
             </select>
             <label for="reason">Tell us about the issue</label>
             <textarea name="reason" id="reason"></textarea>
@@ -258,14 +258,15 @@
     <script src="assets/js/templates.js"></script>
     <script src="assets/js/api.js"></script>
     <script src="assets/js/components/authentication.js"></script>
-    <script src="assets/js/components/notification.js"></script>
-    <script src="assets/js/components/navigation.js"></script>
-    <script src="assets/js/components/pod-order.js"></script>
     <script src="assets/js/components/friends.js"></script>
-    <script src="assets/js/components/user.js"></script>
+    <script src="assets/js/components/navigation.js"></script>
+    <script src="assets/js/components/notification.js"></script>
+    <script src="assets/js/components/pod-order.js"></script>
     <script src="assets/js/components/quick-access.js"></script>
+    <script src="assets/js/components/report.js"></script>
     <script src="assets/js/components/searchbar.js"></script>
     <script src="assets/js/components/settings.js"></script>
+    <script src="assets/js/components/user.js"></script>
     <script src="assets/js/main.js"></script>
 
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
