Made pod order view work with data from clicked element

--- a/src/index.html
+++ b/src/index.html
@@ -210,8 +210,9 @@
     <aside id="pod-order-view">
         <button class="back"><ion-icon name="close-outline"></ion-icon></button>
         <form id="select-travel-location" action="#" method="post">
-            <label for="select-location">Travel to</label>
-            <input type="text" disabled id="select-location" value="Location">
+            <label for="select-location-text">Travel to</label>
+            <input type="hidden" disabled id="select-location">
+            <input type="text" disabled id="select-location-text" value="Location">
 
             <h2>Pod type</h2>
             <div id="pod-select">
