Added current subscription to quick access

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,13 @@
                     </li>
                 </ul>
             </article>
+            <article id="subscription-quick">
+                <h2>Current subscription</h2>
+                <div>
+                    <p>test</p>
+                    <a href="#" id="edit-subscription-quick">Edit</a>
+                </div>
+            </article>
             <input type="button" id="send-package" value="Send Package">
             <h4>Shared locations</h4>
             <button id="open-settings">Settings</button>
