--- a/src/index.html
+++ b/src/index.html
@@ -360,6 +360,8 @@
 
 <aside id="notifications">
 </aside>
+<script src="https://cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vertx/3.5.4/vertx-eventbus.min.js"></script>
 
 <script src="assets/js/templates.js"></script>
 <script src="assets/js/api.js"></script>
